test/types/sync/vass/error-min-on-syncs.compopts
-s doMin -s doSync
-s doMin -s doSingle
-s doMin -s doAtomic
-s doMax -s doSync
-s doMax -s doSingle
-s doMax -s doAtomic
